# ChangeLog for Path Sandbox
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header$

  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c: Code from
  Seth Robertson that tracked down all adjuct flags for read operations that
  do not invoke a write operation.

  04 Apr 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c, sandbox.c:
  Another fix from jstubbs regarding a free() on a stack variable for the
  environment -- tracking now prevents extraneous free()'s segfault.
  
  04 Apr 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c, sandbox.c:
  J. Stubbs tracked down a new bug where mkdir was failing to the patch on
  the lstat in mkdir... it now only returns 0 or -1 as documented for mkdir.
  Also remove the errno = ESUCCESS settings as documentation points out that
  a library isn't allowed to do that.

  04 Apr 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c: Added a
  file_security_check() function to check random potential exploits on files
  that sandbox is to load and read -- Normally sandboxpids.tmp. This fixes
  the 'system-crippling' exploits (bug 21923) and catches a few other
  potential problems.

  20 Mar 2004; Nicholas Jones <carpaski@gentoo.org> Makefile: Updates for
  32/64 bit sandbox. Made CC and LD '?=' values to allow passed in CC to work.

  20 Mar 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c:
  bug 42048 -- Fixed the lstat/errno conditions for mkdir <caleb@g.o>.
  Added the 64/32 bit sandbox patch for AMD64 bug 32963 <brad/azarah>.

  29 Feb 2004; Martin Schlemmer <azarah@gentoo.org> sandbox.c, sandbox_futils.c :
  Fix permissions and group of pids file and logs.  Permissions should be 0664
  and group should be 'portage'.  Bug #34260.

  28 Feb 2004; Martin Schlemmer <azarah@gentoo.org> libsandbox.c :
  Besides a small cleanup, redo how we replace LD_PRELOAD in the environ passed
  to the real execve (in our execve wrapper).  Seems that on some arches (sparc